--- a/index.html
+++ b/index.html
@@ -1,12 +1,187 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+    <title>Седона</title>
+</head>
+<body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+<header>
+    <nav class="main-navigation">
+        <ul>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Фото и видео</a></li>
+            <li><a href="#"><img src="img/header-logo.jpg" alt="Седона"></a></li>
+            <li><a href="#">Карта штата</a></li>
+            <li><a href="#">Гостиница</a></li>
+        </ul>
+    </nav>
 
-  </body>
+    <h1>
+        <span class="hide">Седона</span>
+        <img class="big-logo" src="img/big-logo.jpg">
+    </h1>
+</header>
+
+<main>
+    <div class="about-block">
+        <h2>
+            СЕДОНА — небольшой городок в АРИЗОНЕ, <br>
+            заслуживающий большего!
+        </h2>
+        <p>
+            Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+        </p>
+    </div>
+
+    <div class="feature-block real-life">
+        <div class="feature-item">
+            <b class="feature-name">Настоящий город</b>
+            <div class="feature-number">№1</div>
+            <p class="feature-description">
+                Седона - не аттракцион для туристов, там течет своя жизнь
+            </p>
+        </div>
+
+        <img class="feature-photo" src="img/real-life.jpg">
+    </div>
+
+    <ul class="real-life-list">
+        <li>
+            <b class="real-life-housing">Жилье</b>
+            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </li>
+        <li>
+            <b class="real-life-food">Еда</b>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li>
+            <b class="real-life-souvenirs">Сувениры</b>
+            <p>Не только китайского, но и местного производства!</p>
+        </li>
+    </ul>
+
+    <div class="feature-block devil-bridge">
+        <img class="feature-photo" src="img/devil-bridge.jpg">
+
+        <div class="feature-item">
+            <b class="feature-name">Там есть мост дьявола</b>
+            <div class="feature-number">№2</div>
+            <p class="feature-description">
+                Да, по нему можно пройти! Если конечно вы осмелитесь
+            </p>
+        </div>
+    </div>
+
+    <div class="feature-list">
+        <ul>
+            <li class="feature-item">
+                <b class="feature-name">Небольшая площадь</b>
+                <div class="feature-number">№3</div>
+                <p class="feature-description">
+                    Все достопримечательности находятся очень близко
+                </p>
+            </li>
+            <li class="feature-item">
+                <b class="feature-name">Красивая дорога</b>
+                <div class="feature-number">№4</div>
+                <p class="feature-description">
+                    Ехать в седону из Лас-Вегаса совсем не скучно!
+                </p>
+            </li>
+            <li class="feature-item">
+                <b class="feature-name">Мало туристов</b>
+                <div class="feature-number">№5</div>
+                <p class="feature-description">
+                    Большинство едет в гранд каньон и толпится там
+                </p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="form-intro-block">
+        <b>Заинтересовались?</b>
+
+        <p>
+            Укажите предполагаемые даты поездки, <br>
+            И мы покажем Вам лучшие предложения гостиниц в Седоне
+        </p>
+
+        <a href="#">Поиск гостиницы в Седоне</a>
+    </div>
+
+    <div>
+        <img src="img/static-map.jpg" alt="Карты Седоны">
+
+        <div class="form-block">
+            <form action="https://echo.htmlacademy.ru" method="post">
+
+                <table>
+                    <tbody>
+                    <tr>
+                        <td class="label">
+                            <label for="field=date-in">Дата заезда:</label>
+                        </td>
+                        <td class="field">
+                            <input id="field=date-in" type="date" name="date_in" value="24 апреля 2016">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="label">
+                            <label for="field-date-out">Дата выезда:</label>
+                        </td>
+                        <td class="field">
+                            <input id="field-date-out" type="date" name="date_out" value="4 июля 2016">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="label">
+                            <label for="field-adult-place">Взрослые:</label>
+                        </td>
+                        <td class="field">
+                            <div class="field-adult-place-block">
+                                <div class="field-sub">-</div>
+                                <input id="field-adult-place" type="number" name="adult_place" value="2">
+                                <div class="field-add">+</div>
+                            </div>
+
+                            <label for="field-child-place">
+                                Дети:
+                            </label>
+                            <div class="field-adult-child-block">
+                                <div class="field-sub">-</div>
+                                <input id="field-child-place" type="number" name="child_place" value="0">
+                                <div class="field-add">+</div>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
+                <button type="submit">Найти</button>
+            </form>
+        </div>
+
+        <div class="footer">
+            <div class="footer-hashtag">
+                <a href="#">#visitsedona</a>
+            </div>
+
+            <div class="footer-media">
+                <a class="social-btn social-btn-twitter" href="#"></a>
+                <a class="social-btn social-btn-fb" href="#"></a>
+                <a class="social-btn social-btn-youtube" href="#"></a>
+            </div>
+
+            <div class="footer-copyright">
+                <span>Website by:</span>
+                <a href="https://htmlacademy.ru">
+                    <img src="img/htmlacademy-footer-logo.jpg" alt="htmlacademy.ru">
+                </a>
+            </div>
+        </div>
+    </div>
+</main>
+
+</body>
 </html>
