Ипралена нумерация преимуществ

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="feature-block real-life">
         <div class="feature-item">
             <b class="feature-name">Настоящий город</b>
-            <div class="feature-number">№1</div>
+            <div class="feature-number">&ndash; №1 &ndash;</div>
             <p class="feature-description">
                 Седона - не аттракцион для туристов, там течет своя жизнь
             </p>
@@ -66,7 +66,7 @@
 
         <div class="feature-item">
             <b class="feature-name">Там есть мост дьявола</b>
-            <div class="feature-number">№2</div>
+            <div class="feature-number">&ndash; №2 &ndash;</div>
             <p class="feature-description">
                 Да, по нему можно пройти! Если конечно вы осмелитесь
             </p>
@@ -77,21 +77,21 @@
         <ul>
             <li class="feature-item">
                 <b class="feature-name">Небольшая площадь</b>
-                <div class="feature-number">№3</div>
+                <div class="feature-number">&ndash; №3 &ndash;</div>
                 <p class="feature-description">
                     Все достопримечательности находятся очень близко
                 </p>
             </li>
             <li class="feature-item">
                 <b class="feature-name">Красивая дорога</b>
-                <div class="feature-number">№4</div>
+                <div class="feature-number">&ndash; №4 &ndash;</div>
                 <p class="feature-description">
                     Ехать в седону из Лас-Вегаса совсем не скучно!
                 </p>
             </li>
             <li class="feature-item">
                 <b class="feature-name">Мало туристов</b>
-                <div class="feature-number">№5</div>
+                <div class="feature-number">&ndash; №5 &ndash;</div>
                 <p class="feature-description">
                     Большинство едет в гранд каньон и толпится там
                 </p>
