Подготовка графики и текстовых стилей

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,11 @@
     <ul class="main-navigation">
         <li><a class="main-navigation__link" href="#">Информация</a></li>
         <li><a class="main-navigation__link" href="#">Фото и видео</a></li>
-        <li><a class="main-navigation__logo" href="#"><img src="img/header-logo.jpg" alt="Седона"></a></li>
+        <li>
+            <a class="main-navigation__logo" href="#">
+                <img src="img/main-navigation__logo.png" alt="Седона" width="138" height="70">
+            </a>
+        </li>
         <li><a class="main-navigation__link" href="#">Карта штата</a></li>
         <li><a class="main-navigation__link" href="#">Гостиница</a></li>
     </ul>
@@ -91,7 +95,7 @@
 
         <div class="catalog__body">
             <article class="catalog__item">
-                <img class="catalog__item__photo" src="">
+                <img class="catalog__item__photo" src="img/catalog/item_1.jpg" width="135" height="90">
 
                 <section class="catalog__item__description">
                     <div class="catalog__item__name">Amara resort & SPA</div>
@@ -117,7 +121,7 @@
             </article>
 
             <article class="catalog__item">
-                <img class="catalog__item__photo" src="">
+                <img class="catalog__item__photo" src="img/catalog/item_2.jpg" width="135" height="90">
                 <section class="catalog__item__description">
                     <div class="catalog__item__name">Desert Quail Inn</div>
                     <div class="catalog__item__type">Мотель</div>
@@ -140,7 +144,7 @@
             </article>
 
             <article class="catalog__item">
-                <img class="catalog__item__photo" src="">
+                <img class="catalog__item__photo" src="img/catalog/item_3.jpg">
                 <section class="catalog__item__description">
                     <div class="catalog__item__name">Villas at Poco Diablo</div>
                     <div class="catalog__item__type">Апартаменты</div>
@@ -177,7 +181,7 @@
         <div class="footer__copyright">
             <span>Website by:</span>
             <a href="https://htmlacademy.ru">
-                <img src="img/htmlacademy-footer-logo.jpg" alt="htmlacademy.ru">
+                <img src="img/footer__htmlacademy-logo.png" alt="htmlacademy.ru" width="113" height="39">
             </a>
         </div>
     </footer>
