--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -10,14 +11,20 @@
     <ul class="main-navigation">
         <li><a class="main-navigation__link" href="#">Информация</a></li>
         <li><a class="main-navigation__link" href="#">Фото и видео</a></li>
-        <li><a class="main-navigation__logo" href="#"><img src="img/header-logo.jpg" alt="Седона"></a></li>
+        <li>
+            <a class="main-navigation__logo" href="#">
+                <img src="img/main-navigation__logo.png" alt="Седона" width="138" height="70">
+            </a>
+        </li>
         <li><a class="main-navigation__link" href="#">Карта штата</a></li>
         <li><a class="main-navigation__link" href="#">Гостиница</a></li>
     </ul>
 
     <h1 class="main-header">
         <span class="main-header__text">Седона</span>
-        <img class="main-header__logo" src="img/big-logo.jpg">
+        <img class="main-header__welcome" src="img/index/main-header__welcome.png" width="256" height="86">
+        <img class="main-header__sedona" src="img/index/main-header__sedona.gif" width="458" height="78">
+        <img class="main-header__grand-canyon" src="img/index/main-header__grand-canyon.gif" width="296" height="80">
     </h1>
 
     <section class="about">
@@ -39,26 +46,29 @@
             </p>
         </div>
 
-        <img class="big-feature__photo" src="img/real-life.jpg">
+        <img class="big-feature__photo" src="img/index/real-life__photo.jpg" width="800" height="400">
     </section>
 
     <ul class="real-life">
         <li>
-            <b class="real-life__housing">Жилье</b>
+            <img src="img/index/real-life__housing-icon.png" width="75" height="72">
+            <b class="real-life__name">Жилье</b>
             <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li>
-            <b class="real-life__food">Еда</b>
+            <img src="img/index/real-life__food-icon.png" width="74" height="70">
+            <b class="real-life__name">Еда</b>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li>
-            <b class="real-life__souvenirs">Сувениры</b>
+            <img src="img/index/real-life__souvenirs-icon.png" width="64" height="76">
+            <b class="real-life__name">Сувениры</b>
             <p>Не только китайского, но и местного производства!</p>
         </li>
     </ul>
 
     <section class="big-feature devil-bridge">
-        <img class="big-feature__photo" src="img/devil-bridge.jpg">
+        <img class="big-feature__photo" src="img/index/devil-bridge__photo.jpg" width="800" height="400">
 
         <div class="feature">
             <b class="feature__name">Там есть мост дьявола</b>
@@ -164,7 +174,7 @@
             <div class="footer__copyright">
                 <span>Website by:</span>
                 <a href="https://htmlacademy.ru">
-                    <img src="img/htmlacademy-footer-logo.jpg" alt="htmlacademy.ru">
+                    <img src="img/footer__htmlacademy-logo.png" alt="htmlacademy.ru" width="113" height="39">
                 </a>
             </div>
         </footer>
