Scss + мелкие правки

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <div class="main">
     <div class="top-panel">
         <ul class="main-navigation">
-            <li><a class="main-navigation__link" href="#">Информация</a></li>
-            <li><a class="main-navigation__link" href="#">Фото и видео</a></li>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Фото и видео</a></li>
             <li></li>
-            <li><a class="main-navigation__link" href="#">Карта штата</a></li>
-            <li><a class="main-navigation__link" href="#">Гостиница</a></li>
+            <li><a href="#">Карта штата</a></li>
+            <li><a href="#">Гостиница</a></li>
         </ul>
 
-        <div class="main-navigation__logo-box">
+        <div class="top-panel__logo-box">
             <a href="#">
                 <img src="img/main-navigation__logo.png" alt="Седона" width="138" height="70">
             </a>
@@ -45,7 +45,7 @@
         </p>
     </section>
 
-    <section class="big-feature big-feature--real-life clearfix">
+    <section class="big-feature big-feature--real-life">
         <div class="feature">
             <h2 class="feature__name">Настоящий город</h2>
             <div class="feature__number">&ndash; №1 &ndash;</div>
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <ul class="real-life clearfix">
+    <ul class="real-life">
         <li>
             <img src="img/index/real-life__housing-icon.png" width="75" height="72">
             <h3 class="real-life__name">Жилье</h3>
@@ -77,7 +77,7 @@
         </li>
     </ul>
 
-    <section class="big-feature big-feature--devil-bridge clearfix">
+    <section class="big-feature big-feature--devil-bridge">
         <div class="big-feature__photo">
             <img src="img/index/devil-bridge__photo.jpg" width="800" height="400">
         </div>
@@ -91,7 +91,7 @@
         </div>
     </section>
 
-    <ul class="feature-list clearfix">
+    <ul class="feature-list">
         <li class="feature">
             <h2 class="feature__name">Небольшая площадь</h2>
             <div class="feature__number">&ndash; №3 &ndash;</div>
@@ -123,7 +123,9 @@
             И мы покажем Вам лучшие предложения гостиниц в Седоне
         </p>
 
-        <a class="form-intro__link" href="#"><strong>Поиск гостиницы в Седоне</strong></a>
+        <a class="form-intro__link" href="#">
+            <strong>Поиск гостиницы в Седоне</strong>
+        </a>
     </section>
 
     <section class="bottom-section">
@@ -174,7 +176,7 @@
             <button type="submit">Найти</button>
         </form>
 
-        <footer class="footer footer--index clearfix">
+        <footer class="footer footer--index">
             <a class="footer-column footer__hashtag" href="#">#visitsedona</a>
 
             <div class="footer-column footer__social">
