--- a/catalog.html
+++ b/catalog.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <div class="main">
     <div class="top-panel">
         <ul class="main-navigation">
-            <li><a class="main-navigation__link" href="#">Информация</a></li>
-            <li><a class="main-navigation__link" href="#">Фото и видео</a></li>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Фото и видео</a></li>
             <li></li>
-            <li><a class="main-navigation__link" href="#">Карта штата</a></li>
-            <li><a class="main-navigation__link" href="#">Гостиница</a></li>
+            <li><a href="#">Карта штата</a></li>
+            <li><a href="#">Гостиница</a></li>
         </ul>
 
-        <div class="main-navigation__logo-box">
+        <div class="top-panel__logo-box">
             <a href="#">
                 <img src="img/main-navigation__logo.png" alt="Седона" width="138" height="70">
             </a>
         </div>
     </div>
 
-    <form class="search-form clearfix" action="https://echo.htmlacademy.ru" method="post">
+    <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="search-form__infrastructure">
             Инфраструктура:
 
@@ -80,7 +80,7 @@
     </form>
 
     <section class="catalog">
-        <div class="catalog-header clearfix">
+        <div class="catalog-header">
             <div class="catalog-header__count">
                 Найдено: 3
             </div>
@@ -100,7 +100,7 @@
         </div>
 
         <div class="catalog-body">
-            <article class="catalog-item clearfix">
+            <article class="catalog-item">
                 <img class="catalog-item__photo" src="img/catalog/item_1.jpg" width="135" height="90">
 
                 <section class="catalog-item__description">
@@ -123,7 +123,7 @@
                 </section>
             </article>
 
-            <article class="catalog-item clearfix">
+            <article class="catalog-item">
                 <img class="catalog-item__photo" src="img/catalog/item_2.jpg" width="135" height="90">
                 <section class="catalog-item__description">
                     <div class="catalog-item__name">Desert Quail Inn</div>
@@ -145,7 +145,7 @@
                 </section>
             </article>
 
-            <article class="catalog-item clearfix">
+            <article class="catalog-item">
                 <img class="catalog-item__photo" src="img/catalog/item_3.jpg">
                 <section class="catalog-item__description">
                     <div class="catalog-item__name">Villas at Poco Diablo</div>
@@ -169,7 +169,7 @@
         </div>
     </section>
 
-    <footer class="footer clearfix">
+    <footer class="footer">
         <a class="footer-column footer__hashtag" href="#">#visitsedona</a>
 
         <div class="footer-column footer__social">
